--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Szymon Wydra - Software Engineer Portfolio"
+      content="Szymon Wydra - Software Developer Portfolio"
     />
     <title>Szymon Wydra | Portfolio</title>
   </head>
