--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,17 @@
       content="Szymon Wydra - Software Developer Portfolio"
     />
     <title>Szymon Wydra | Portfolio</title>
+
+    
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-T3TX9CVS7H"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-T3TX9CVS7H');
+  </script>
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
